--- a/promos.html
+++ b/promos.html
@@ -196,7 +196,7 @@
                       <div class="promo-classic__price-aside"><span class="top">99</span><span class="bottom">course</span></div>
                     </div>
                     <p class="promo-classic__price-old">Original Price &#x20B9;5,999.00</p>
-                    <div class="promo-classic__control"><a class="button button-primary button-ujarak" href="#">Order now</a></div>
+                    <div class="promo-classic__control"><a class="button button-primary button-ujarak" href="https://pages.razorpay.com/pl_FJ3CeWCCkyAGAl/view">Order now</a></div>
                   </div>
                 </div>
               </article>
